# Aliens-Versus-Predator-VR

./: .gitignore  README.md
assets/: .gitignore
platform/android/: gradle.properties  settings.gradle.kts
platform/android/app/: build.gradle.kts
platform/android/app/src/androidTest/java/com/bassquake/avp/: ExampleInstrumentedTest.kt
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/java/com/bassquake/avpvr/: InstallAssets.kt  MainActivity.kt
platform/android/app/src/main/java/com/bassquake/utils/: FileUtils.kt  InstallAssets.kt
platform/android/app/src/main/res/values/: strings.xml  themes.xml
platform/android/app/src/main/res/values-night/: themes.xml
platform/android/app/src/mobile/: AndroidManifest.xml
platform/android/app/src/quest/: AndroidManifest.xml
platform/android/app/src/test/java/com/bassquake/avpvr/: ExampleUnitTest.kt
platform/android/gradle/wrapper/: gradle-wrapper.properties
source/: .gitignore  CMakeLists.txt  README.md
source/src/: android-bridge.cpp  cdplayer.c  cdplayer.h  files.c  files.h  fmv.c  fmv.h  frustum.c  frustum.h  kshape.c  main.c  menus.c  opengl.c  opengl.h  stubs.c  xr_menu_quad_patch.c
source/src/avp/: avpview.c  avpview.h  bh_videoscreen.c  consolelog.cpp  decal.c  decal.h  hud.c  huddefs.h  langenum.h  language.c  los.c  particle.c  particle.h  pmove.c  weapons.c  xr_camera.c
source/src/avp/win95/: kzsort.c  pldnet.c  projload.cpp  usr_io.c
source/src/avp/win95/frontend/: avp_intro.cpp  avp_intro.h  avp_menudata.c  avp_menus.c  avp_mp_config.cpp  avp_userprofile.cpp  avp_userprofile.h
source/src/win95/: db.c  videomodes.cpp
